# lima

./: Cargo.toml  README.md
migrations/: 20230701104609_initial.sql
src/: main.rs
static/: styles.css
templates/: base.html  index.html  styles.css
