[package]
name = "lima"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
sqlx = { version = "0.7.0-alpha.3", features = ["runtime-tokio", "sqlite"] }
axum = "0.6.18"
askama = { version = "0.12", default-features = false, features = [
  "with-axum",
  "mime",
  "mime_guess",
] }
askama_axum = "0.3.0"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
